--- a/posprinterv2/posprinterv2.csproj
+++ b/posprinterv2/posprinterv2.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ESCPOS_NET\ESCPOS_NET.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+
   </ItemGroup>
 
 </Project>
